# godfile

./: .coverage  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/godfile/: __init__.py  cli.py  config.py  output.py  rules.py  scanner.py
src/godfile_cpp/: cli.py  output.py  rules.py  scanner.py
src/sinklint/: __init__.py  cli.py  output.py  rules.py
tests/: test_config.py  test_edges.py  test_godfile.py  test_sinklint.py
tests/fixtures/: clean.h  enums.h  ignored.h  kitchen_sink.h
