[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "godfile"
version = "0.4.0"
description = "Detect C/C++ kitchen-sink headers that violate the one-type-per-file convention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["tomli>=1.1.0; python_version < '3.11'"]
authors = [{ name = "Aerom Xundes", email = "aerom.xundes@gmail.com" }]
keywords = ["c++", "static-analysis", "linter", "header", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/AeromXundes/godfile"

[project.scripts]
godfile = "godfile.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=godfile --cov-fail-under=85 --cov-report=term-missing"

[tool.coverage.run]
source = ["godfile"]
